# Detection-frequence

./: .gitignore  Makefile  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ConvertToMp3/: convert_wav_mp3.rs  mod.rs  mp3.rs
src-tauri/src/Distorsion/: distorsion.rs  mod.rs
src-tauri/src/FFT/: fft.rs
src-tauri/src/Fade/: fade.rs
src-tauri/src/Fusion/: ambience.rs  fusion_wav.rs  mod.rs
src-tauri/src/MuteBetween/: mod.rs  mutebetween.rs
src-tauri/src/Only_left_right/: leftNright.rs  mod.rs  only_left.rs  only_right.rs
src-tauri/src/Record/: mod.rs  sound_record.rs
src-tauri/src/Repeat/: repeat.rs
src-tauri/src/Resonance/: mod.rs  resonance.rs
src-tauri/src/Tools/: filter.rs  gain.rs  generate.rs  generate_melody.rs  inverse.rs  mod.rs  playsounds.rs  speed.rs
src-tauri/src/Vibrato/: mod.rs  vibrato.rs
src-tauri/src/WavReader/: mod.rs  wavreader.rs
src-tauri/src/noise_reduct/: auto_tune.rs  mod.rs  music_detect.rs  pass.rs  threshold.rs
src/sounds/MID/: generatedpasmal.mid  generatedpasmal2.mid  generatedpasmal3.mid
